Fixed overflow with mouse animation, removed the animation in mobile view

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -21,6 +21,9 @@ $button-hover-color: #cdf3f3;
     
 }
     
+ main{
+  max-width: 100vw;
+ }
  body{
   overflow-x: hidden;
  }
