--- a/scss/_layout-desktop.scss
+++ b/scss/_layout-desktop.scss
@@ -24,6 +24,7 @@
       .introSection {
         height: 40vh;
         flex-wrap: wrap;
+        flex-direction: column;
         justify-content: center;
         align-items: flex-start;
   
