--- a/scss/main.css
+++ b/scss/main.css
@@ -6,6 +6,10 @@
   scroll-behavior: smooth;
 }
 
+main {
+  max-width: 100vw;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -97,6 +101,7 @@ nav a:hover {
 }
 
 #block {
+  display: inline;
   left: 50%;
   top: 50%;
   background-color: black;
@@ -105,11 +110,17 @@ nav a:hover {
   position: absolute;
   translate: -50% -50%;
   border-radius: 50%;
+  overflow: hidden;
   background: linear-gradient(to right, aquamarine, mediumpurple);
   animation: rotate 20s infinite;
   filter: blur(200px);
 }
 
+@media screen and (max-width: 1120px) {
+  #block {
+    display: none;
+  }
+}
 @keyframes rotate {
   from {
     rotate: 0deg;
@@ -255,6 +266,7 @@ footer {
   .mainContent .introSection {
     height: 40vh;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
     align-items: flex-start;
   }
